--- a/metadata.yaml
+++ b/metadata.yaml
@@ -5,6 +5,9 @@ contributor:
     agent_name: Elrod, Winifred D.
     gutenberg_agent_id: '55351'
     url: http://www.gutenberg.org/2009/agents/55351
+covers:
+- cover_type: archival
+  image_path: 69637-h/images/cover.jpg
 creator:
   author:
     agent_name: Montgomery, Frances Trego
@@ -16,6 +19,8 @@ creator:
     gutenberg_agent_id: '8392'
     url: http://www.gutenberg.org/2009/agents/8392
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/69637#On-a-lark-to-the-planets-a-sequel-to-the-wonderful-electric-elephant
 gutenberg_issued: '2022-12-25'
 identifiers:
   gutenberg: '69637'
